2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputStream/registerValidation.java:
	Check fields and priority order.
	* gnu/testlet/java/io/ObjectInputStream/TestObjectInputValidation.java:
	Add self reference, register multiple times with different priorities,
	add equals().

2005-10-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/runner/Mauve.java
	(execute): save default locale before running tests and restore it 
	after,
	(getSourceDirectory): removed inappropriate return value,
	(main): removed redundant code.

2005-10-30  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/runner/Mauve.java: reformatted and updated header.

2005-10-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/java/awt/Component/requestFocus.java: Changed from JFrame
	to Frame, changed Tags from JDK 1.2 to JDK 1.0.

2005-10-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/java/awt/Component/requestFocus.java: New test.

2005-10-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JFileChooser/changeToParentDirectory.java:
	New test.

2005-10-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/DefaultListSelectionModel/setLeadSelectionIndex.java:
	New test.

2005-10-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JTable/setModel.java
	(testPropertyFired): New test method.
	(testSelectionModel): New test method.
	(testLeadAnchorSelectionUpdate): New test method.

2005-10-28  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 

        * gnu/testlet/org/omg/PortableServer/POAOperations/poa_POA_test.java:
	Give 500 ms for the server thread to start.

2005-10-27  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JTextField/createDefaultModel.java:
	New test.
	* gnu/testlet/javax/swing/text/PlainDocument/insertString.java:
	New test.

2005-10-27  Audrius Meskauskas  <AudriusA@Bioinformatics.org> 
